app/assets/stylesheets/style.css.scss
/* ... */
#breadcrumb{
  position: fixed;
  top:50px;
  height:30px;
  width:100%;
  background: $light-grey;
  left:0;
}

/***********Nodes and Containers************/

/* nodes and legend items */
div.node, div.legend {
  background: $light-grey;
  padding-left: 15px;
  padding-right: 5px;
  max-width: 250px;
  word-wrap: break-word;
  position: absolute;
  text-align: center;
  z-index: 7;

  &.syn {
    @include node-border($dark-blue);
    text-align: left;
    max-height: 150px;
  }

  &.field {
    @include node-border($blue);

    .icon-user-md{
      font-size: 28px;
      margin: 0;
      background: transparent;
      float: right;
      line-height: 50px;
      vertical-align: middle;
      margin-left: 5px;
      padding-left: 5px;
    }

    .content{
      float: left;
      max-width: 160px;
    }
  }

  &.drg {
    @include node-border($red);
  }

  &.exclusiva {
    @include node-border($green);
  }

  &.inclusiva {
    @include node-border($orange);
  }

  &.super {
    @include node-border($dark-green);
  }

  &.sub {
    @include node-border($purple);
  }

  &.root {
    background: $light-grey;
    @include node-border($grey);
    @include border-radius(5px);
    font-size: 20px;
    z-index: 10;
    max-width: 300px;
    min-width: 200px;
    min-height: 100px;
    display: table-cell;
    vertical-align: middle;

  }
}

div.node{
  &.syn{
    overflow-y: scroll;
  }
}

.relatedness-container {
  width: 100px;
  height: 5px;
  border: $dark-blue 1px solid;
  margin: 6px auto 6px auto;
  background: white;
}

.relatedness-display {
  background: $blue;
  height: 100%;
  left: 0;
  float: left;
}

/* containers */
div.container {
  position: absolute;
  z-index: 2;
  @include border-radius(7px);

  //black
  &.syn {
    @include opacity(0.3);
    background: lighten($dark-blue, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //blue
  &.field {
    @include opacity(0.3);
    background: lighten($blue, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //red
  &.drg {
    @include opacity(0.5);
    background: lighten($red, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //orange
  &.inclusiva-exclusiva {
    @include opacity(0.5);
    background: lighten($orange, 30%);
    &.active {
      @include opacity(1);
    }
  }

  //grey
  &.super {
    @include opacity(0.3);
    background: lighten($dark-green, 50%);
    &.active {
      @include opacity(1);
    }
  }

  //purple
  &.sub {
    @include opacity(0.5);
    background: lighten($purple, 30%);
    &.active {
      @include opacity(1);
    }
  }

  &.active {
    .container-inner {
      p {
        display: inline;
          @include opacity(1);
      }
    }
  }

  .container-inner {
    position: relative;
    width: 100%;
    height: 100%;
    p {
      @include opacity(0.5);
      padding: 2px;
      position: absolute;
      margin: 0;
      //bottom-right
      &.syn {
        bottom: 0;
        right: 5px;
      }

      //top-left
      &.field {
        top: 0;
        left: 0;
      }

      //top-middle
      &.drg {
        top: 0;
        left: 0;
      }

      //bottom-middle
      &.inclusiva-exclusiva {
        bottom: 0;
        left: 0;
      }

      //top-right
      &.super {
        top: 0;
        right: 5px;
      }

      //right-middle
      &.sub {
        top: 0;
        right: 5px;
      }

      &.show-type {
        font-size: 20px;
      }

    }

  }

}

.front-container {
  z-index: 4;
  position: absolute;
}

/***********Overlay************/

.docOverlay, #location-popup {
  height: 100%;
  width: 100%;
  position: relative;

  .location p {
    position: relative;
    display: inline;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    margin: 0;
  }

  h3 {
    margin-left: 5px;
  }

  #map {
    float: right;
    display: inline;
    width: 60%;
    height: 85%;
  }

  #location-map {
    float: left;
    display: inline;
    width: 700px;
    height: 500px;
    z-index: 1000 !important;
    position: relative !important;
    padding: 0 15px !important;

    div {
      z-index: 500 !important;
      position: absolute !important;
    }
  }

  #docList {
    float: left;
    display: inline;
    width: 40%;
    height: 85%;
    overflow: scroll;
    overflow-x: hidden;

    /* the label for the input behind the doc list */
    label {
      display: inline-block;
      background-color: $light-grey;
      padding: 4px 11px;
      width: 100%;
      &:hover {
        background-color: $dark-grey !important;
        color: white !important;
      }
    }

    /* the input element behind the doctor list */
    input[type="radio"] {
      display: none;

      &:checked + label {
        background-color: $grey;
      }

      .active:after {
        content: url(arrow.png);
        position: absolute;
        top: 50%;
        left: 100%;
        margin: 10px;
      }
    }
  }
}

#location-input {
  height: 25px;
}

